--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,28 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Actix Web</title>
     </head>
     <body>
-        {% block content %}
-        {% endblock content %}
+        <section class="section">
+            <div class="container">
+                {% block content %}
+                {% endblock content %}
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="content has-text-centered">
+                <p>
+                <strong>This site</strong> by <a href="https://github.com/loitd">Tran Duc Loi</a> using Rust Actix Web, Bulma, Tera and much more. The website content
+                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+                </p>
+            </div>
+        </footer>
+
+        <!-- Trying to import bulma -->
+        <link rel="stylesheet" href="/static/css/bulma.min.css">
     </body>
 </html>
