--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>hello {{name}}</h1>
+    <h1 class="title">hello {{name}}</h1>
+    <p class="subtitle">Greeting with template created with tera and bulma</p>
 {% endblock content %}
