updated by Loitd

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="title">hello {{name}}</h1>
-    <p class="subtitle">Greeting with template created with tera and bulma</p>
+    <article class="uk-article">
+        <h1 class="uk-article-title">hello {{name}}</h1>
+        <p class="uk-article-meta">Greeting with template created with tera and bulma</p>
+    </article>
 {% endblock content %}
