updated by Loitd

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
 
                 <!-- Copyright -->
                 <div class="uk-text-center uk-padding uk-padding-remove-horizontal">
-                    <p>Made with <span class="uk-text-danger" uk-icon="icon: heart"></span> using <a href="https://actix.rs/">Rust Actix</a> & <a href="https://getuikit.com/">UIKit</a></p>
+                    <p>Made with <span class="uk-text-danger" uk-icon="icon: heart"></span> using <a href="https://actix.rs/">Rust Actix</a> & <a href="https://getuikit.com/">UIKit 3.5.14</a></p>
                 </div>
             </div>
         </footer>
